# VRhotspot

./: .gitignore  BUNDLED_LIBNL_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  README.md  SECURITY.md  SOLUTION_SUMMARY.md  THIRD_PARTY_NOTICES.md  cleanup_project.sh  commit_proof.txt  file_proof.txt  git_log.txt  install.sh  proof_lifecycle.txt  proof_script.txt  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
assets/: field_visibility.js  index.html  qrcode.js  ui.css  ui.js
docs/: EXISTING_FEATURE_AUDIT.md  FLATPAK_ARCHITECTURE_PLAN.md  HOST_FACTS_SNAPSHOT_PLAN.md  PLATFORM_COMPATIBILITY.md  ROADMAP_v1.1.0.md  VENDOR_PROVENANCE_SBOM_PLAN.md  adapter-intelligence-v2.md  build-hostapd.md  first-run-wizard.md  support-bundle.md  versioning.md
flatpak_app/: __init__.py  __main__.py  app.py  tray.py
flatpak_client/: __init__.py  client.py  control.py  pairing.py  ui.py  wallet.py
tests/: conftest.py  host_facts_snapshot_factory.py  test_80mhz_enforcement.py  test_active_uplink_start_guard.py  test_adapter_inventory.py  test_adapter_inventory_virtual.py  test_adapter_readiness.py  test_ap_adapter_normalization.py  test_ap_ready_fallback.py  test_api_adapter_readiness.py  test_api_autostart.py  test_api_preflight_report.py  test_api_support_bundle.py  test_auth.py  test_basic_mode_enforcement.py  test_capture_logs.py  test_channel_validation.py  test_cli_preflight.py  test_clients_diagnostic.py  test_cmd_builders.py  test_config_network_validation.py  test_diagnostic_input_budgets.py  test_diagnostics_auth.py  (+58 more)
(+74 files in other folders)
