[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vr-hotspotd"
version = "0.1.0"
description = "VR-grade Wi-Fi hotspot daemon for SteamOS/Linux"
requires-python = ">=3.9"

[project.scripts]
vr-hotspotd = "vr_hotspotd.main:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["backend/vendor", "vr-keygen/venv"]

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
